# vo_practice

./: CMakeLists.txt  README.md
config/: default.yaml  kitti.yaml
evaluate/: evaluate_ate.py  evaluate_rpe.py
evaluate/ground/: 03.txt  04.txt  07.txt
evaluate/result/: 03.txt  04.txt  07.txt
include/gslam/: Camera.h  Converter.h  Frame.h  Map.h  MapPoint.h  ORBmatcher.h  Optimizer.h  VisualOdometry.h  g2o_types.h
src/: .Optimizer.cpp.swp  CMakeLists.txt  Camera.cpp  Config.cpp  Frame.cpp  Map.cpp  MapPoint.cpp  ORBmatcher.cpp  Optimizer.cpp  VisualOdometry.cpp  g2o_types.cpp
test/: CMakeLists.txt  main.cpp  reformat_kitti_poses.cpp  run_vo.cpp  run_vo.h  test_camproj.cpp  test_stereomatch.cpp
